<resources>
    <string name="app_name">SextouApp</string>
    <string name="login_label">Login</string>
    <string name="password_label">password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>

    <string name="or_login">OR</string>
    <string name="sign_in_google">Sign in With Google</string>
    <string name="sign_in_twitter">Sign in With Twitter</string>
    <string name="sign_in_facebook">Sign in With Facebook</string>

    <string name="validation_email_null">Please insert an e-mail.</string>
    <string name="validation_email_invalid">Please enter a valid e-mail.</string>
    <string name="validation_password_null">Please insert a password.</string>
    <string name="validation_password_minsize">Password must have at least 6 characters.</string>
    <string name="validation_name_null">Please insert a name.</string>
    <string name="validation_name_minsize">Name must have at least 3 characters.</string>
    <string name="validation_cpf_null">Please insert a CPF.</string>
    <string name="validation_cpf_minsize">CPF must have at least 6 digits.</string>
    <string name="validation_cpf_num">CPF must contain only numbers.</string>
    <string name="validation_cpf_equaldigits">CPF must not contain all equal digits.</string>
    <string name="validation_cpf_valid">Please insert a CPF.</string>
    <string name="login_error_auth">You have entered an invalid username or password</string>
    <string name="error_generic">Something went wrong. Try again later.</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="register_button_text">Register</string>
    <string name="register_label_text">Please fill in the requested information:</string>
    <string name="name_label">Full Name</string>
    <string name="error_camera">Error creating file. Try again later</string>
    <string name="error_form_invalid">Please provide valid information.</string>
    <string name="item_name_hint">Item Name</string>
    <string name="insert_item_bt_text">Insert Item</string>
    <string name="item_info_hint">Additional Information (Optional)</string>
    <string name="item_name_error">Please insert a name for the item.</string>
    <string name="insert_member_bt_text">Inserir Membro</string>
    <string name="member_form_email">Email</string>
    <string name="insert_valid_value">Insert a valid value.</string>
    <string name="cancel">Cancelar</string>
    <string name="del">Deleter</string>
    <string name="remove">Remover</string>
    <string name="novo_evento_title">Novo Evento</string>
    <string name="tab_items_title">Items</string>
    <string name="tab_members_title">Members</string>
    <string name="event_title">Eventos</string>
    <string name="option_purchased">Mark as Purchased</string>
    <string name="error_crud">error while saving.</string>
    <string name="user_not_found">User not Found with provided email</string>
</resources>
