<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="br.com.app.sextouApp.ui.login.LoginViewModel" />
        <import type="br.com.app.sextouApp.utils.Validator" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="8dp"
        tools:context=".ui.login.LoginActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login"
            validator="@{Validator.EMAIL}"
            model="@{viewModel.login}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_label"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintVertical_bias="0.4"
            app:layout_constraintBottom_toTopOf="@id/password">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.login}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            validator="Validator.PASSWORD"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/password_label"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/sign_in"
            app:layout_constraintTop_toBottomOf="@id/login">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:text="@={viewModel.password}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            app:layout_constraintTop_toBottomOf="@id/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/sign_in"
            app:layout_constraintBottom_toTopOf="@id/social_button_facebook"
            android:layout_marginEnd="16dp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            app:layout_constraintStart_toEndOf="@id/sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/sign_up"
            app:layout_constraintBottom_toBottomOf="@id/sign_up"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/or_login"
            app:layout_constraintTop_toTopOf="@id/or_login"
            app:layout_constraintBottom_toBottomOf="@id/or_login"
            android:background="@android:color/darker_gray"
            />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/or_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/sign_in"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/or_login"
            android:paddingHorizontal="8dp"
            app:layout_constraintBottom_toTopOf="@id/social_button_facebook"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintStart_toEndOf="@id/or_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/or_login"
            app:layout_constraintBottom_toBottomOf="@id/or_login"
            android:background="@android:color/darker_gray"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/social_button_facebook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/social_button_twitter"
            android:text="@string/sign_in_facebook"
            android:backgroundTint="@color/facebookColor"
            android:layout_marginBottom="8dp"
            app:icon="@drawable/ic_facebook"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/social_button_twitter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/social_button_google"
            android:text="@string/sign_in_twitter"
            android:backgroundTint="@color/twitterColor"
            android:layout_marginBottom="8dp"
            app:icon="@drawable/ic_twitter"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/social_button_google"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/sign_in_google"
            android:backgroundTint="@color/googleColor"
            android:layout_marginBottom="24dp"
            app:icon="@drawable/ic_google"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>