<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="br.com.app.sextouApp.ui.signUp.SignUpViewModel" />
        <import type="br.com.app.sextouApp.utils.Validator" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.signUp.SignUpFragment"
        android:layout_marginHorizontal="8dp">

        <ImageView
            android:id="@+id/signup_profile_pic"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/signup_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="48dp"
            imageBitmap="@{viewModel.profilePic}"
            tools:src="@drawable/drawable_round_profile_pic"
            app:layout_constraintDimensionRatio="1"
            />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/signup_add_pic"
            android:src="@drawable/ic_add"
            app:fabSize="mini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="@id/signup_profile_pic"
            app:layout_constraintEnd_toEndOf="@id/signup_profile_pic"
            app:layout_constraintTop_toBottomOf="@id/signup_profile_pic"
            app:layout_constraintBottom_toBottomOf="@id/signup_profile_pic"
            />

        <TextView
            android:id="@+id/signup_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/register_label_text"
            app:layout_constraintBottom_toTopOf="@id/signup_name"
            android:layout_marginBottom="8dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_name"
            validator="@{Validator.NAME}"
            model="@{viewModel.name}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/name_label"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/signup_login"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintVertical_bias=".6"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:text="@={viewModel.name}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_login"
            validator="@{Validator.EMAIL}"
            model="@{viewModel.email}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_label"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_name"
            app:layout_constraintBottom_toTopOf="@id/signup_password"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.email}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_password"
            validator="@{Validator.PASSWORD}"
            model="@{viewModel.password}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/password_label"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/signup_button"
            app:layout_constraintTop_toBottomOf="@id/signup_login">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:text="@={viewModel.password}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/register_button_text"
            app:layout_constraintTop_toBottomOf="@id/signup_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/Widget.MaterialComponents.Button"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>